# adventofcode2022

./: README.md
day1/: part1.py  part2.py  test.txt
python/day1/: part1.py  part2.py
rust/day1/: Cargo.toml
rust/day1/benches/: my_benchmark.rs
rust/day1/src/: lib.rs  main.rs  part1.rs  part2.rs
rust/day3/src/: main.rs
